<resources>
    <string name="app_name">NMedia_AAD</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_like">Likes</string>
    <string name="description_views">Views</string>
    <string name="description_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="cancel">Cancel</string>
    <string name="Zero">0</string>
    <string name="add_post">Add post</string>
    <string name="video_plug">Share post</string>
    <string name="video_play">Share post</string>
    <string name="chooser_share_post">Chooser share post</string>
    <string name="post_saved">Post saved</string>

</resources>